@@ -29,6 +29,7 @@ Version 1.1.5 to be released
 - Enh: Added checking for empty keywords in addSearchCondition(), to prevent adding unnecessary conditions (mdomba)
 - Enh: Added flushValues() method to the cache classes (Y!!)
 - Enh: Added buttonset for CJuiButoon (sebas)
+- Enh: Added CGridView default sort order icon if defaultOrder is specified in sort array of CActiveDataProvider (mdomba)
 - Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)
 
 Version 1.1.4 September 5, 2010
